# agent-trace

./: README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-vscode.yml  publish.yml
ADRs/: 0001-flat-event-stream-data-model.md  0002-ndjson-file-storage-no-database.md  0003-zero-runtime-dependencies.md  0004-hook-integration-via-separate-processes.md  0005-mcp-proxy-stdio-man-in-the-middle.md  0006-otlp-http-json-no-grpc.md  0007-heuristic-redaction.md  0008-token-cost-estimation-heuristic.md  0009-claude-code-jsonl-import.md  0010-session-explain-phase-detection.md  README.md
examples/: basic_agent.py  claude_code_config.md  cursor_config.md  session_analysis.md  test_locally.py  windsurf_config.md
src/agent_trace/: __init__.py  a2a.py  annotate.py  attribution.py  audit.py  cli.py  cost.py  curve.py  dashboard.py  diff.py  explain.py  freshness.py  hooks.py  http_proxy.py  inflation.py  jsonl_import.py  masking.py  models.py  oncall.py  otlp.py  policy.py  postmortem.py  proxy.py  replay.py  shadow_ai.py  share.py  standup.py  store.py  subagent.py  token_budget.py  watch.py  why.py
src/agent_trace/eval/: __init__.py  config.py  dataset.py  runner.py  scorers.py
tests/: test_a2a.py  test_annotate.py  test_attribution.py  test_audit.py  test_cost.py  test_curve.py  test_dashboard.py  test_diff_compare.py  test_diff_why.py  test_eval.py  test_explain.py  test_freshness.py  test_hooks.py  test_html_replay.py  test_inflation.py  test_jsonl_import.py  test_masking.py  test_oncall.py  test_otlp.py  test_otlp_improvements.py  test_policy.py  test_semantic_diff.py  test_shadow_ai.py  test_share.py  test_standup.py  test_subagent.py  test_token_budget.py  test_watch.py  test_watch_nanny.py  test_watch_operations.py
vscode-extension/: README.md  package.json
vscode-extension/media/: panel.html
vscode-extension/src/: decorations.ts  extension.ts  panel.ts  pauseAgent.ts  statusBar.ts  traceStore.ts
