[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-strace"
version = "0.1.0"
description = "strace for AI agents. Capture and replay every tool call, LLM request, and decision point."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Siddhant Khare", email = "siddhantkhare2694@gmail.com" }
]
keywords = ["ai", "agents", "observability", "tracing", "mcp", "llm", "tool-calls"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
]

[project.scripts]
agent-strace = "agent_trace.cli:main"

[project.urls]
Homepage = "https://github.com/Siddhant-K-code/agent-trace"
Repository = "https://github.com/Siddhant-K-code/agent-trace"
Issues = "https://github.com/Siddhant-K-code/agent-trace/issues"
Documentation = "https://github.com/Siddhant-K-code/agent-trace#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_trace"]
